# ai-review

./: .gitignore  2026-01-20T22:08:17Z  3910649c-f36f-4d4b-a0f5-779fbb0b1438.txt  5098bf03-7225-4261-923d-e82e0982f4e8.txt  7da4effc-8b15-4d2f-b14c-332909bcdec3.txt  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  FEATURES.md  PLAN.md  PR_DESCRIPTION.md  README.md  SETUP_NOTES.md  USAGE.md  dotfiles  electron-builder.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  runbook.md  tailwind.config.js  tmp_mc_summary.txt  tsconfig.json  vite.config.ts
.claude-plugin/: marketplace.json  plugin.json
.clawdhub/: lock.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml  update-cask.py  (+1 more)
.openclaw/: workspace-state.json
ai-zeitgeist/: gather.sh  telegram-send.sh
cli/: aid  air  build-install-macos.sh  install.sh
core/: Cargo.toml
core/core-launcher/: Cargo.toml
core/core-launcher/src/: lib.rs  main.rs
core/core-launcher/tests/: argv.rs
core/core-lib/: Cargo.toml
core/core-lib/src/: lib.rs
core/core-sidecar/: Cargo.toml
core/core-sidecar/src/: main.rs
core/core-sidecar/tests/: jsonrpc.rs
electron/: argv.test.ts  argv.ts  main.ts  menu.ts  preload.ts  sidecar.ts  tsconfig.json
incidents/: 2026-05-28-openclaw-codex-auth-expiring.md
memory/: 2026-05-28.md
scripts/: .gg-test-state.json  .github_notify_state.json
src/: App.test.tsx  App.tsx  diff.css  highlight.ts  index.css  main.tsx  markdown.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+158 files in other folders)
