[workspace]
resolver = "2"
members = [
    "core-lib",
    "core-sidecar",
    "core-launcher",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Nacho Lopez"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
